[gd_scene load_steps=9 format=2]

[ext_resource path="res://Source/Scripts/Battle/StatusBarStyle.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Battle/status_bar_bw.png" type="Texture" id=2]
[ext_resource path="res://Scenes/Battle/EnemyHPBarBW.tscn" type="PackedScene" id=3]
[ext_resource path="res://Fonts/pkmndp.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Scenes/Battle/GenderIcon.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Battle/StatusIcon.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 12
outline_size = 1
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_size = 1
outline_color = Color( 0.129412, 0.129412, 0.129412, 1 )
font_data = ExtResource( 4 )

[node name="EnemyStatusBarBW" type="Node2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="HPBarStyle" parent="." instance=ExtResource( 3 )]
position = Vector2( 43, 8 )

[node name="Level" type="Label" parent="."]
margin_left = 93.0
margin_top = -3.0
margin_right = 133.0
margin_bottom = 8.0
custom_fonts/font = SubResource( 1 )
text = "0"

[node name="GenderIcon" parent="." instance=ExtResource( 5 )]
position = Vector2( 76, -3 )

[node name="Name" type="Label" parent="."]
margin_left = 16.0
margin_top = -3.0
margin_right = 72.0
margin_bottom = 11.0
custom_fonts/font = SubResource( 2 )

[node name="StatusIcon" parent="." instance=ExtResource( 6 )]
position = Vector2( 6, 7 )
